refactored the whole app to have a service responsible of getting the ideas
fixed some UI issues
mocked up the data into that service.
Cleaned up some code.
added some comments.

Next step is to replace the ng - route by the UI router.

--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script><!-- load angular -->
 		<link href="bootstrap.css" rel="stylesheet" />
 		<link href="bootstrap-theme.css" rel="stylesheet" />
+		<script src="filters/customFilters.js"></script>
 		<script>
 			angular.module("ideaBox", ["customFilters", "ngRoute"])
 			.config( function ($routeProvider){
@@ -26,9 +27,12 @@
 				});
 			});
 		</script>
+
+	
+		<script src="components/ideaService.js"></script>
 		<script src="controllers/ideaBox.js"></script>
-		<script src="filters/customFilters.js"></script>
-		<script src="controllers/ideasListControllers.js"></script>
+		<script src="controllers/ideaListControllers.js"></script>
+		<script src="controllers/ideaDetailsControllers.js"></script>
 		<script src="ngmodules/angular-route.js"></script>
 		<style>
 			.navbar-right { float: right !important; margin-right: 5px;}
